<resources>
    <string name="app_name">screens2</string>
    <string name="get_back">back</string>
    <string name="update_user">update user</string>
    <string name="new_event">new event</string>
    <string name="update_event">update event</string>
    <string name="login_button">login</string>
    <string name="register_button">register</string>
    <string name="events_button">events</string>
    <string name="username_text">Username:</string>
    <string name="password_text">Password:</string>
    <string name="phone_number_text">Phone Number:</string>
    <string name="empty_input"> </string>
    <string name="login_title">LOGIN</string>
    <string name="register_title">REGISTER</string>
    <string name="main_title">MAIN</string>
    <string name="logout_button">logout</string>
    <string name="update_button">update</string>
    <string name="update_user_title">UPDATE USER</string>
    <string name="events_title">EVENTS</string>
    <string name="user_events_title">MY EVENTS</string>
    <string name="new_event_title">NEW EVENT</string>
    <string name="update_event_title">UPDATE EVENT</string>
    <string name="update_event_button">update event</string>
    <string name="user_events_button">my events</string>
    <string name="meeting_name_text">Meeting Name:</string>
    <string name="meeting_date_text">Date:</string>
    <string name="meeting_time_text">Time:</string>
    <string name="meeting_members">Members:</string>
    <string name="delete_button">delete</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
</resources>
